# chinese_learning_portal

./: .gitignore  DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  docusaurus.config.ts  json-structure.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
docs/hsk1/: _category_.json  lesson-1.md  stories-1.md  stories-2.md  stories-3.md  stories-4.md
lessons/hsk/hsk1/: lesson-1.json  stories-1.json
scripts/: README.md  generate_lesson.py  generate_lesson_audio.py  generate_lesson_md.py
src/components/: AudioPlayButton.module.css  AudioPlayButton.tsx  ClickableCharacter.module.css  ClickableCharacter.tsx  FillInBlankCharacter.module.css  FillInBlankCharacter.tsx  HanziWriterModal.module.css  HanziWriterModal.tsx
src/components/ExerciseSection/: ExerciseSection.module.css  index.tsx
src/pages/: index.tsx
